--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="Info">Информация о разработчике:</string>
     <string name="Info_text">Максим Реснянский  21-ИСП-3
         18 лет</string>
+    <string name="text_for_main">Все основные кнопки находятся в правом верхнем углу надо просто нажать на 3 точки и кнопки появятся</string>
     <string name="uppercase">Uppercase</string>
     <string name="reverse">Reverse</string>
     <string name="ok">Ok</string>
