add link to my web-site and translate all text to english

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,10 @@
     <string name="menu_about">About </string>
     <string name="menu_exit">Exit </string>
     <string name="input_label"/>
-    <string name="Info">Информация о разработчике:</string>
-    <string name="Info_text">Максим Реснянский  21-ИСП-3 18 лет</string>
-    <string name="text_explanation">Что бы воспользоваться функционалом выберете переключатель Reverse и нажмите кнопку Ок </string>
-    <string name="text_for_main">Все основные кнопки находятся в правом верхнем углу надо просто нажать на 3 точки и кнопки появятся</string>
+    <string name="Info">Developer information:</string>
+    <string name="Info_text">Maxim Resnyansky  group-21-ИСП-3 18 years</string>
+    <string name="text_explanation">To use the functionality, select the CheckBox that called -> Reverse and click to Ок </string>
+    <string name="text_for_main">All the main buttons are in the upper right corner, you just need to click on 3 dots and the buttons will appear</string>
     <string name="uppercase">Uppercase</string>
     <string name="reverse">Reverse</string>
     <string name="ok">Ok</string>
