--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">First application</string>
-    <string name="menu_reverse">Reverse </string>
+    <string name="app_name">Reverse</string>
+    <string name="menu_reverse">Reverse text</string>
     <string name="menu_about">About </string>
     <string name="menu_exit">Exit </string>
     <string name="input_label"/>
